--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/compatible": "^1.0.4",
     "@ant-design/icons": "^4.2.1",
     "@babel/core": "7.9.0",
     "@svgr/webpack": "4.3.3",
